tests/fixtures/invalid/bin_2_args.py
# bin() takes at most 1 argument, got 2
x = bin(1, 1)
